unpackaged/main/default/objects/Apex_Code_Settings__c/Apex_Code_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Apex Code Settings</label>
</CustomObject>