unpackaged/main/default/objects/Apex_Code_Settings__c/fields/GL_13240_Id__c.field-meta.xml
<CustomField>
    <fullName>GL_13240_Id__c</fullName>
    <description>Id of the "13240.01 - MS - TEXAS SALES TAX - PAYABLE" GL Account referenced by the AccountPayable trigger to create Account Payable Line for Client Telephone Bill.</description>
    <label>GL 13240 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>