unpackaged/main/default/objects/Apex_Code_Settings__c/fields/GL_14020_Id__c.field-meta.xml
<CustomField>
    <fullName>GL_14020_Id__c</fullName>
    <description>Id of the "14020 - SALES-MS-SERVICES" GL Account referenced by the AccountPayable trigger to create Account Payable Line for MS Lease Payment.</description>
    <label>GL 14020 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>