unpackaged/main/default/objects/Apex_Code_Settings__c/fields/GL_16021_Id__c.field-meta.xml
<CustomField>
    <fullName>GL_16021_Id__c</fullName>
    <description>Id of the "16021 - C/S-MS-ACCESS" GL Account referenced by the AccountPayable trigger to create Account Payable Line for Client Telephone Bill.</description>
    <label>GL 16021 Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>