unpackaged/main/default/objects/Apex_Code_Settings__c/fields/Misc_Taxes_Surcharges_and_Fees_Id__c.field-meta.xml
<CustomField>
    <fullName>Misc_Taxes_Surcharges_and_Fees_Id__c</fullName>
    <description>Id of the Miscellaneous Taxes, Surcharges and Fees Product referenced by the AccountPayable trigger to create Account Payable Line for Client Telephone Bill.</description>
    <label>Misc. Taxes, Surcharges and Fees Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>