unpackaged/main/default/objects/Apex_Code_Settings__c/fields/Texas_Sales_Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Texas_Sales_Tax_Id__c</fullName>
    <description>Id of the Texas Sales Tax Product referenced by the AccountPayable trigger to create Account Payable Line for Client Telephone Bill.</description>
    <label>Texas Sales Tax Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>