unpackaged/main/default/objects/Apex_Code_Settings__c/fields/Texas_Star_Bank_Id__c.field-meta.xml
<CustomField>
    <fullName>Texas_Star_Bank_Id__c</fullName>
    <description>Id of the Texas Star Bank Account record referenced by the AccountPayable for MS Lease Payment</description>
    <label>Texas Star Bank Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>